# mandarine

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  license.txt  patch.patch
.ci/: ios.sh  license-header.rb  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci-merge.js  format.yml  license-header.yml  publish.yml  transifex.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  GenerateBuildInfo.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: build.gradle.kts  code-style-java.xml
src/android/app/: build.gradle.kts
src/audio_core/: CMakeLists.txt  cubeb_input.cpp  cubeb_sink.cpp  oboe_sink.cpp  oboe_sink.h
src/citra/: CMakeLists.txt  citra.cpp  citra.rc  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_sw.cpp  emu_window_sdl2_vk.cpp
src/citra_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  citra-qt.rc  citra_qt.cpp  citra_qt.h  compatdb.cpp  compatdb.ui  compatibility_list.cpp  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  main.cpp  main.h  main.ui  uisettings.h
src/citra_qt/camera/: camera_util.cpp  qt_camera_base.h  qt_multimedia_camera.cpp  still_image_camera.cpp  still_image_camera.h
src/citra_qt/configuration/: config.cpp  configuration_shared.cpp  configure_audio.cpp  configure_debug.cpp  configure_debug.ui  configure_dialog.cpp  configure_enhancements.cpp  configure_enhancements.ui  configure_general.cpp  configure_general.ui  configure_graphics.cpp  configure_graphics.ui  configure_hotkeys.cpp  configure_layout.cpp  configure_layout.ui  configure_motion_touch.cpp  configure_per_game.cpp  configure_per_game.h  configure_storage.cpp  configure_system.cpp  configure_touch_from_button.cpp  configure_touch_from_button.ui
src/citra_qt/debugger/: console.cpp  wait_tree.cpp
src/citra_qt/dumping/: dumping_dialog.cpp  option_set_dialog.cpp
src/citra_qt/movie/: movie_play_dialog.cpp  movie_record_dialog.cpp
src/citra_qt/multiplayer/: chat_room.cpp  client_room.h  direct_connect.cpp  host_room.cpp  host_room.h  lobby.cpp  message.cpp  moderation_dialog.cpp  state.cpp
src/citra_qt/updater/: updater.cpp  updater_p.h
src/citra_qt/util/: clickable_label.cpp  graphics_device_info.cpp
src/citra_sdl/: config.cpp  default_ini.h
src/common/: CMakeLists.txt  arch.h  assert.h  common_funcs.h  common_paths.h  file_util.cpp  file_util.h  settings.cpp  settings.h  vector_math.h
src/common/aarch64/: cpu_detect.cpp  cpu_detect.h  oaknut_abi.h  oaknut_util.h
src/common/hacks/: hack_list.cpp  hack_list.h  hack_manager.h
src/common/logging/: backend.cpp  text_formatter.cpp  types.h
src/common/x64/: cpu_detect.cpp  cpu_detect.h  xbyak_abi.h  xbyak_util.h
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  memory.cpp  memory.h  movie.cpp
src/core/arm/: exclusive_monitor.cpp
src/core/cheats/: gateway_cheat.cpp
src/core/file_sys/: plugin_3gx.cpp  plugin_3gx.h
src/core/frontend/: framebuffer_layout.cpp  framebuffer_layout.h
src/core/loader/: artic.cpp  ncch.cpp
src/core/tracer/: recorder.h
src/dedicated_room/: CMakeLists.txt  citra-room.cpp  citra-room.rc  mandarin-room.cpp  mandarine-room.cpp  mandarine-room.rc
src/input_common/: CMakeLists.txt
src/input_common/udp/: client.cpp  protocol.h
src/mandarin/: config.cpp  default_ini.h  mandarin.cpp
src/mandarin/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/mandarin_qt/: CMakeLists.txt  aboutdialog.ui  bootmanager.cpp  compatdb.cpp  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  loading_screen.cpp  main.cpp  main.h  main.ui  qt_image_interface.cpp
src/mandarin_qt/applets/: mii_selector.cpp  swkbd.cpp
src/mandarin_qt/camera/: qt_camera_base.cpp  qt_multimedia_camera.h  still_image_camera.cpp  still_image_camera.h
src/mandarin_qt/configuration/: config.cpp  config.h  configuration_shared.cpp  configure.ui  configure_audio.cpp  configure_camera.cpp  configure_debug.cpp  configure_dialog.cpp  (+11 more)
src/mandarine/: CMakeLists.txt  config.cpp  default_ini.h  mandarine.cpp  mandarine.rc
src/mandarine/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/mandarine_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  compatdb.cpp  compatdb.ui  compatibility_list.cpp  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  loading_screen.cpp  main.cpp  main.h  main.ui  mandarine-qt.rc  play_time_manager.cpp  qt_image_interface.cpp
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  network_settings.h  room.cpp  room.h  verify_user.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  gpu.cpp  gpu_impl.h  renderer_base.cpp  right_eye_disabler.h
src/web_service/: CMakeLists.txt  announce_room_json.h  verify_login.h  verify_user_jwt.cpp
(+585 files in other folders)
